--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -348,6 +348,7 @@ p {
 }
 
 .flashUpdates_grid {
+	width: 100%;
   .list {
     display: block !important;
   }
